# pgbouncer-ng

./: .gitignore  LICENSE  README.md  example_server.crt  example_server.key  pgbouncer-ng  pgbouncer-ng.py  pgbouncerng.ini  setup.py
pgbouncer-cpp/: CMakeLists.txt
pgbouncer-cpp/src/: CMakeLists.txt  connection.cpp  connection.hpp  main.cpp  server.cpp  server.hpp
pgbouncerlib/: __init__.py  server.py  settings.py  utils.py
