CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(pgbouncer-cpp)
FIND_PACKAGE(Qt4 4.8.0 REQUIRED QtCore QtNetwork)
SET(QT_DONT_USE_QTGUI TRUE)

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
    ${PROJECT_BINARY_DIR}
    ${PROJECT_SOURCE_DIR}
)

SET(CMAKE_CXX_FLAGS "-O3 -std=c++0x")
SET(CMAKE_INSTALL_PREFIX /usr/local/niwi)
ADD_SUBDIRECTORY(src)

